ghc-4335c07/testsuite/tests/indexed-types/should_compile/T8651.hs
{-# LANGUAGE RankNTypes, FlexibleContexts, TypeFamilies #-}
module T8651 where

import Data.Monoid

type family Id a

type instance Id a = a
 --type instance Id [a] = [Id a]

foo :: (Monoid (Id String) => r) -> r
foo x = x

bar = foo "Hello"
